# AutoTrackerRS

./: .gitignore  Cargo.toml  README.md  build.rs
src/: input.rs  main.rs  main_gtk
