[package]
name = "AutoTrackerRS"
version = "0.1.0"
authors = ["sandor.berglund@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.x11rb]
version="0.6.0"
features=["present", "xinput", "all-extensions"]