[package]
name = "AutoTrackerRS"
version = "0.1.0"
authors = ["sandor.berglund@gmail.com"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = "2.18.2"
libc = "0.2"
lazy_static = "1.4.0"
datetime = "0.5.1"
############
shared_memory = "0.11.1"
raw_sync = "0.1.2"

[dependencies.x11rb]
version="0.6.0"
features=["present", "xinput", "xevie", "record","all-extensions"]


[build-dependencies]
pkg-config = "0.3.8"